【修改说明】：加入自动转存功能