@@ -1,19 +1,28 @@
 package com.zzf.wechatgzhzzf.demos.Service;
 
 import com.zzf.wechatgzhzzf.demos.config.SearchConfig;
+import com.zzf.wechatgzhzzf.demos.web.WxController;
 import org.json.JSONArray;
 import org.json.JSONException;
 import org.json.JSONObject;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.io.*;
 import java.net.HttpURLConnection;
 
+import java.net.URI;
 import java.net.URL;
+import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 @Service
 public class ApiClient {
@@ -21,27 +30,7 @@ public class ApiClient {
     @Autowired
     private SearchConfig searchConfig;
 
-    /**
-     * 综合查询方法 - 先尝试飞书接口，失败后再尝试原API接口
-     * @param input 查询关键词
-     * @return 查询结果
-     */
-    private String combinedSearch(String input) {
-        // 1. 先尝试飞书接口查询
-        String fsResult = callFSApiAndExtractResults(input);
-
-        // 检查飞书接口是否返回了有效结果（不是失败提示且不为空）
-        if (isValidResult(fsResult)) {
-            return fsResult;
-        }
-
-        // 2. 飞书接口查询失败或无结果，尝试原API接口
-        String apiResult = callKobApiAndExtractResults(input);
-
-        // 返回原API接口的结果（无论是否成功）
-        return apiResult;
-    }
-
+    private static final Logger logger = LoggerFactory.getLogger(ApiClient.class);
     /**
      * 处理用户输入，判断是否触发搜索
      * @param input 用户输入的字符串
@@ -52,174 +41,10 @@ public class ApiClient {
         if (input != null && input.startsWith(searchConfig.getKeyWord())) {
             // 移除 "帮我搜索" 并 trim 后传入
             String searchQuery = input.substring(searchConfig.getKeyWord().length()).trim();
-            return combinedSearch(searchQuery);
+            return callKobApiAndExtractResults(searchQuery);
         } else {
             return searchConfig.getKeywordTip();
         }
-    }
-
-    /**
-     * 判断结果是否有效
-     * @param result 查询结果
-     * @return 是否有效
-     */
-    private boolean isValidResult(String result) {
-        // 结果为空
-        if (result == null || result.trim().isEmpty()) {
-            return false;
-        }
-
-        // 结果是失败提示
-        if (result.equals(searchConfig.getFailureMessage())) {
-            return false;
-        }
-
-        // 结果以成功前缀开头
-        return result.startsWith(searchConfig.getSuccessPrefix());
-    }
-
-    public String callFSApiAndExtractResults(String input) {
-        try {
-            // 第一步：获取飞书tenant_access_token
-            String fsToken = getFSToken();
-            if (fsToken == null) {
-                return searchConfig.getFailureMessage();
-            }
-
-            // 第二步：使用token查询飞书接口
-            String searchUrl = String.format("https://open.feishu.cn/open-apis/bitable/v1/apps/%s/tables/%s/records/search?page_size=%d",
-                    searchConfig.getAppToken(), searchConfig.getTableId(), searchConfig.getPageSize());
-
-            // 使用模板构建请求体（替换占位符）
-            String requestBody = String.format(searchConfig.getRequestBodyTemplate(), input);
-
-            // 发送请求
-            String searchResponse = sendFSRequest(searchUrl, fsToken, requestBody);
-
-            // 提取结果
-            String result = extractFSResult(searchResponse);
-
-            // 处理结果
-            if (result != null && !result.trim().isEmpty()) {
-                return searchConfig.getSuccessPrefix() + result + searchConfig.getSuccessSuffix();
-            } else {
-                return searchConfig.getFailureMessage();
-            }
-        } catch (Exception e) {
-            return searchConfig.getFailureMessage();
-        }
-    }
-
-    private String getFSToken() throws Exception {
-        String tokenUrl = "https://open.feishu.cn/open-apis/auth/v3/tenant_access_token/internal";
-
-        // 构建请求体
-        JSONObject requestBody = new JSONObject();
-        requestBody.put("app_id", searchConfig.getAppId());
-        requestBody.put("app_secret", searchConfig.getAppSecret());
-
-        String response = sendPostRequest(tokenUrl, requestBody.toString());
-        JSONObject responseJson = new JSONObject(response);
-
-        if (responseJson.getInt("code") == 0) {
-            return responseJson.getString("tenant_access_token");
-        }
-        return null;
-    }
-
-    private String sendFSRequest(String urlString, String token, String requestBody) throws Exception {
-        HttpURLConnection connection = null;
-        BufferedReader reader = null;
-        try {
-            URL url = new URL(urlString);
-            connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestMethod("POST");
-            connection.setRequestProperty("Content-Type", "application/json");
-            connection.setRequestProperty("Authorization", "Bearer " + token);
-            connection.setConnectTimeout(searchConfig.getConnectionTimeout());
-            connection.setReadTimeout(searchConfig.getReadTimeout());
-            connection.setDoOutput(true);
-
-            try (OutputStream os = connection.getOutputStream()) {
-                byte[] input = requestBody.getBytes("utf-8");
-                os.write(input, 0, input.length);
-            }
-
-            int responseCode = connection.getResponseCode();
-            if (responseCode == HttpURLConnection.HTTP_OK) {
-                reader = new BufferedReader(new InputStreamReader(connection.getInputStream()));
-                StringBuilder response = new StringBuilder();
-                String inputLine;
-
-                while ((inputLine = reader.readLine()) != null) {
-                    response.append(inputLine);
-                }
-                return response.toString();
-            } else {
-                throw new RuntimeException("飞书请求失败，响应码: " + responseCode);
-            }
-        } finally {
-            if (reader != null) {
-                try {
-                    reader.close();
-                } catch (Exception e) {
-                    // 关闭时的异常可以忽略
-                }
-            }
-            if (connection != null) {
-                connection.disconnect();
-            }
-        }
-    }
-
-    private String extractFSResult(String apiResponse) throws JSONException {
-        JSONObject responseJson = new JSONObject(apiResponse);
-        if (responseJson.getInt("code") != 0 || !responseJson.has("data")) {
-            return null;
-        }
-
-        JSONObject data = responseJson.getJSONObject("data");
-        if (!data.has("items") || data.getJSONArray("items").length() == 0) {
-            return null;
-        }
-
-        JSONArray items = data.getJSONArray("items");
-        StringBuilder result = new StringBuilder();
-
-        for (int i = 0; i < items.length(); i++) {
-            JSONObject item = items.getJSONObject(i);
-            JSONObject fields = item.getJSONObject("fields");
-
-            String name = extractFSTextValue(fields, "名字");
-            String link = extractFSTextValue(fields, "链接");
-
-            if (!name.isEmpty() || !link.isEmpty()) {
-                result.append(name).append("\n").append(link);
-                if (i < items.length() - 1) {
-                    result.append("\n\n");
-                }
-            }
-        }
-
-        return result.length() > 0 ? result.toString() : null;
-    }
-
-    private String extractFSTextValue(JSONObject fields, String fieldName) throws JSONException {
-        if (!fields.has(fieldName)) {
-            return "";
-        }
-
-        JSONObject field = fields.getJSONObject(fieldName);
-        if (field.getInt("type") != 1 || !field.has("value")) {
-            return "";
-        }
-
-        JSONArray values = field.getJSONArray("value");
-        if (values.length() == 0) {
-            return "";
-        }
-
-        return values.getJSONObject(0).getString("text");
     }
 
     public String callKobApiAndExtractResults(String input) {
@@ -227,7 +52,7 @@ public class ApiClient {
         try {
             // 第一步：获取token（所有接口共用同一个token）
             String tokenUrl = "http://" + searchConfig.getUrlPrefix() + "/v/api/getToken";
-            String tokenResponse = sendGetRequest(tokenUrl);
+            String tokenResponse = sendGetRequest(tokenUrl,null);
             JSONObject tokenJson = new JSONObject(tokenResponse);
             token = tokenJson.getString("token");
         } catch (Exception e) {
@@ -246,12 +71,32 @@ public class ApiClient {
                 String searchResponse = sendPostRequest(apiUrl, requestBody.toString());
 
                 // 提取结果
-                String result = extractQuestionAndAnswer(searchResponse);
+                List<String> answers = extractAnswers(searchResponse);
+                Map<String, String> ansResults = processAnswers(answers);
 
-                // 如果有结果，立即返回
-                if (result != null && !result.trim().isEmpty()) {
-                    return searchConfig.getSuccessPrefix() + result + searchConfig.getSuccessSuffix();
+                // 检查Map是否为空
+                if (ansResults == null || ansResults.isEmpty()) {
+                    continue;
                 }
+
+                StringBuilder resultBuilder = new StringBuilder();
+
+                // 添加成功前缀
+                resultBuilder.append(searchConfig.getSuccessPrefix())
+                        .append("\n");
+
+                // 遍历Map并添加键值对
+                for (Map.Entry<String, String> entry : ansResults.entrySet()) {
+                    resultBuilder.append(entry.getKey())  // 添加键
+                            .append("\n")            // 换行
+                            .append(entry.getValue()) // 添加值
+                            .append("\n");           // 换行
+                }
+
+                // 添加成功后缀
+                resultBuilder.append(searchConfig.getSuccessSuffix());
+
+                return resultBuilder.toString();
             } catch (Exception e) {
                 // 当前API查询失败，继续尝试下一个
                 continue;
@@ -262,51 +107,169 @@ public class ApiClient {
         return searchConfig.getFailureMessage();
     }
 
-    private String extractQuestionAndAnswer(String apiResponse) throws JSONException {
+    private List<String> extractAnswers(String apiResponse) throws JSONException {
         JSONObject responseJson = new JSONObject(apiResponse);
         int maxResults = searchConfig.getMaxResults(); // 获取最大结果数
+        List<String> answerList = new ArrayList<>();
 
-        // 检查是否有list字段（适用于search接口）
+        // 处理包含list字段的响应（search接口）
         if (responseJson.has("list")) {
             JSONArray list = responseJson.getJSONArray("list");
-            if (list.length() == 0) {
-                return null;
-            }
-
-            StringBuilder result = new StringBuilder();
             int count = 0;
             for (int i = 0; i < list.length() && count < maxResults; i++) {
                 JSONObject item = list.getJSONObject(i);
-                String question = item.optString("question", "");
-                String answer = item.optString("answer", "");
+                String answerText = item.optString("answer", "").trim();
 
-                if (!question.isEmpty() || !answer.isEmpty()) {
-                    if (count > 0) {
-                        result.append("\n\n"); // 只在两个结果之间添加空行
-                    }
-                    result.append(question).append("\n").append(answer);
-                    count++;
+                // 从文本中提取所有URL链接
+                List<String> urls = extractUrlsFromText(answerText);
+                for (String url : urls) {
+                    answerList.add(url);
                 }
+                count++;
             }
-            return result.length() > 0 ? result.toString() : null;
+            return answerList;
         }
 
-        // 检查其他可能的响应格式（适用于其他接口）
-        String question = responseJson.optString("question", "");
-        String answer = responseJson.optString("answer", "");
-
-        if (!question.isEmpty() || !answer.isEmpty()) {
-            return question + "\n" + answer;
+        // 处理单结果响应（其他接口）
+        String answerText = responseJson.optString("answer", "").trim();
+        List<String> urls = extractUrlsFromText(answerText);
+        int count = 0;
+        for (String url : urls) {
+            if (count >= maxResults) break;
+            answerList.add(url);
+            count++;
         }
 
+        return answerList;
+    }
+
+    // 从文本中提取所有URL链接
+    private List<String> extractUrlsFromText(String text) {
+        List<String> urls = new ArrayList<>();
+        if (text == null || text.isEmpty()) {
+            return urls;
+        }
+
+        // 正则表达式匹配URL
+        String regex = "(https?://[\\w.-]+(?:/\\S*)?)";
+        Pattern pattern = Pattern.compile(regex);
+        Matcher matcher = pattern.matcher(text);
+
+        while (matcher.find()) {
+            String url = matcher.group(1).trim();
+            // 确保URL是有效的
+            if (url.startsWith("http://") || url.startsWith("https://")) {
+                urls.add(url);
+            }
+        }
+
+        return urls;
+    }
+
+    private Map<String, String> processAnswers(List<String> answers) {
+        Map<String, String> resultMap = new HashMap<>();
+
+        for (String answer : answers) {
+            try {
+                // 0. 检查是否包含baidu或quark - 如果不包含则跳过
+                if (!answer.contains("baidu") && !answer.contains("quark")) {
+                    System.out.println("跳过非百度/夸克链接: " + answer);
+                    continue;
+                }
+
+                // 1. 解析code参数
+                String code = extractCodeFromUrl(answer);
+
+                // 2. 确定isType参数
+                int isType = determineIsType(answer);
+
+                // 3. 构建请求参数
+                Map<String, String> params = new HashMap<>();
+                params.put("url", answer);
+                params.put("expired_type", "2");
+                params.put("isType", String.valueOf(isType));
+                params.put("isSave", "0");
+
+                if (code != null && !code.isEmpty()) {
+                    params.put("code", code);
+                }
+
+                // 4. 发送API请求
+                String apiResponse = sendGetRequest("https://www.zzfdip.cyou/api/open/transfer", params);
+
+                // 5. 解析API响应
+                JSONObject responseJson = new JSONObject(apiResponse);
+                if (responseJson.getInt("code") == 200) {
+                    JSONObject data = responseJson.getJSONObject("data");
+                    String title = data.getString("title");
+                    String shareUrl = data.getString("share_url");
+
+                    // 6. 存入结果Map
+                    resultMap.put(title, shareUrl);
+                } else {
+                    // 处理API错误响应
+                    String errorMsg = responseJson.getString("message");
+                    logger.error("API调用失败: " + errorMsg + " | URL: " + answer);
+                }
+            } catch (Exception e) {
+                // 处理异常（记录日志等）
+                logger.error("处理答案时出错: " + answer);
+            }
+        }
+
+        return resultMap;
+    }
+
+    // 从URL中提取code参数
+    private String extractCodeFromUrl(String url) {
+        int pwdIndex = url.indexOf("pwd=");
+        if (pwdIndex != -1) {
+            String afterPwd = url.substring(pwdIndex + 4);
+            int endIndex = afterPwd.indexOf('&');
+            if (endIndex == -1) endIndex = afterPwd.length();
+            return afterPwd.substring(0, endIndex);
+        }
         return null;
     }
 
-    public String sendGetRequest(String urlString) throws Exception {
+    // 根据URL内容确定isType参数
+    private int determineIsType(String url) {
+        if (url.contains("baidu")) {
+            return 2;
+        } else if (url.contains("quark")) {
+            return 0;
+        }
+        // 默认值（根据您的业务需求调整）
+        return 0;
+    }
+
+    public String sendGetRequest(String baseUrl, Map<String, String> params) throws Exception {
+        // 构建带参数的完整URL
+        StringBuilder urlBuilder = new StringBuilder(baseUrl);
+        if (params != null && !params.isEmpty()) {
+            urlBuilder.append("?");
+            boolean firstParam = true;
+            for (Map.Entry<String, String> entry : params.entrySet()) {
+                if (!firstParam) {
+                    urlBuilder.append("&");
+                }
+                urlBuilder.append(URLEncoder.encode(entry.getKey(), "UTF-8"))
+                        .append("=")
+                        .append(URLEncoder.encode(entry.getValue(), "UTF-8"));
+                firstParam = false;
+            }
+        }
+
+        String fullUrl = urlBuilder.toString();
+        System.out.println("完整请求URL: " + fullUrl); // 调试日志
+
         HttpURLConnection connection = null;
         BufferedReader reader = null;
         try {
-            URL url = new URL(urlString);
+            // 使用URI解决非法字符问题
+            URI uri = new URI(fullUrl);
+            URL url = uri.toURL();
+
             connection = (HttpURLConnection) url.openConnection();
             connection.setRequestMethod("GET");
             connection.setConnectTimeout(searchConfig.getConnectionTimeout());
